# byte_calculator

./: Cargo.toml  README.md
doc/: README.html  help.html  search-index.js  settings.html  src-files.js
doc/doc/: all.html  index.html  sidebar-items.js  struct.ByteConverter.html
doc/src/doc/: lib.rs.html
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  tests.rs
src/byte_converter/: byte_converter.rs  mod.rs
